cc: Fix flaky scroll animation test

This fixes LayerTreeHostAnimationTestScrollOffsetAnimationAdjusted
by removing an expectation that depends on the ordering of the
first draw and the second commit, and isn't actually needed for
what's being tested.

BUG=690584
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2692493002
Cr-Commit-Position: refs/heads/master@{#449665}

Former-commit-id: a446224d4d9f2ffd3b0598d5c7647c886890a8ce